Added Module separation for admin and user

--- a/codewow-app/src/app/contact/contact.component.html
+++ b/codewow-app/src/app/contact/contact.component.html
@@ -1,1 +1,16 @@
+
+
+<body class="home5-body">
+    
+    
+    <!--@ANoop todo create one header which will encapsulate both in one and avoid component inside header tag -->
+    <header class="h5-header">
+        <app-header1></app-header1>
+        <app-header2></app-header2>
+      </header>
+
+
 <p>contact works!</p>
+
+<app-footer> </app-footer>
+</body>
