--- a/codewow-app/src/app/header2/header2.component.html
+++ b/codewow-app/src/app/header2/header2.component.html
@@ -16,19 +16,19 @@
             <a class="nav-link" routerLink="" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
         </li>
         <li>            
-        <a class="nav-link" routerLink="about" routerLinkActive="active">About Us</a>     
+        <a class="nav-link" routerLink="../about" routerLinkActive="active">About Us</a>     
         </li>
-        <li><a class="nav-link" routerLink="services" routerLinkActive="active">Services</a>
+        <li><a class="nav-link" routerLink="../services" routerLinkActive="active">Services</a>
         </li>
-        <li><a class="nav-link" routerLink="training" routerLinkActive="active">Training</a>
+        <li><a class="nav-link" routerLink="../training" routerLinkActive="active">Training</a>
         </li>
-        <li><a class="nav-link" routerLink="bootcamp" routerLinkActive="active">Bootcamp</a>
-        </li>
-        <li>
-         <a class="nav-link" routerLink="blog" routerLinkActive="active">Blog</a>
+        <li><a class="nav-link" routerLink="../bootcamp" routerLinkActive="active">Bootcamp</a>
         </li>
         <li>
-         <a class="nav-link" routerLink="contact" routerLinkActive="active">Contact</a>
+         <a class="nav-link" routerLink="../blog" routerLinkActive="active">Blog</a>
+        </li>
+        <li>
+         <a class="nav-link" routerLink="../contact" routerLinkActive="active">Contact</a>
         </li>       
     </ul>
 </nav>
