--- a/codewow-app/src/app/services/services.component.html
+++ b/codewow-app/src/app/services/services.component.html
@@ -1,4 +1,15 @@
 
+<body class="home5-body">
+    
+    
+    <!--@ANoop todo create one header which will encapsulate both in one and avoid component inside header tag -->
+    <header class="h5-header">
+        <app-header1></app-header1>
+        <app-header2></app-header2>
+      </header>
+
+
+      
 <!-- h5-subject-area-start -->
 <div class="h5-subject-area bg-with-black">
         <div class="container">
@@ -364,3 +375,9 @@
         </div>
     </div>
     <!-- h5-blog-end -->
+
+
+
+
+    <app-footer> </app-footer>
+</body>
