--- a/codewow-app/src/app/user-module/user-about/user-about.component.html
+++ b/codewow-app/src/app/user-module/user-about/user-about.component.html
@@ -4,8 +4,7 @@
     
     <!--@ANoop todo create one header which will encapsulate both in one and avoid component inside header tag -->
     <header class="h5-header">
-        <app-header1></app-header1>
-        <app-header2></app-header2>
+        <app-user-header></app-user-header>
       </header>
 
 
@@ -403,5 +402,5 @@
 <!-- h5-blog-end -->
 
 
-<app-footer> </app-footer>
+
 </body>
