--- a/codewow-app/src/app/user-module/user-home/user-home.component.html
+++ b/codewow-app/src/app/user-module/user-home/user-home.component.html
@@ -3,8 +3,7 @@
     
     <!--@ANoop todo create one header which will encapsulate both in one and avoid component inside header tag -->
     <header class="h5-header">
-        <app-header1></app-header1>
-        <app-header2></app-header2>
+        <app-user-header></app-user-header>
       </header>
      
 
@@ -452,7 +451,7 @@
 
 
 
-    <app-footer> </app-footer>
+   
 </body>
 
 
