--- a/codewow-app/src/app/blog/blog.component.html
+++ b/codewow-app/src/app/blog/blog.component.html
@@ -1,3 +1,15 @@
+
+<body class="home5-body">
+    
+    
+    <!--@ANoop todo create one header which will encapsulate both in one and avoid component inside header tag -->
+    <header class="h5-header">
+        <app-header1></app-header1>
+        <app-header2></app-header2>
+      </header>
+
+
+
 <div class="h5-blog-area">
         <div class="container">
             <div class="row">
@@ -50,3 +62,8 @@
             </div>
         </div>
     </div>
+
+
+
+    <app-footer> </app-footer>
+</body>
