--- a/codewow-app/src/app/user-module/user-services/user-services.component.html
+++ b/codewow-app/src/app/user-module/user-services/user-services.component.html
@@ -1,91 +1,16 @@
+
 <body class="home5-body">
     
     
     <!--@ANoop todo create one header which will encapsulate both in one and avoid component inside header tag -->
     <header class="h5-header">
-        <app-header1></app-header1>
-        <app-header2></app-header2>
+        <app-user-header></app-user-header>
       </header>
-     
-
-<!-- h5-hero-area-start -->
-
 
 
       
-
-      
-<div class="h5-hero-area bg-with-black">
-        <div class="container">
-            <div class="row">
-                  
-                    <div class="col-md-8 col-sm-6 col-xs-12">
-                            <div class="h5-hc-carousel owl-carousel">
-                                    <div class="h5-hero-content">
-                                            <h2>An Innovative Graduate university of Theology</h2>
-                                            <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                                            <!-- <a href="#">View Campus</a> -->
-                                        </div>
-                                        <div class="h5-hero-content">
-                                            <h2>An Innovative Graduate university of Theology</h2>
-                                            <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                                            <!-- <a href="#">View Campus</a> -->
-                                        </div>
-                                        <div class="h5-hero-content">
-                                            <h2>An Innovative Graduate university of Theology</h2>
-                                            <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                                            <!-- <a href="#">View Campus</a> -->
-                                        </div>
-                                       </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="h5-hero-register">
-                                <h2>Register Now</h2>
-                                <form action="#">
-                                    <input type="text" placeholder="Your full name">
-                                    <input type="email" placeholder="Your email">
-                                    <input type="text" placeholder="Mobile phone">
-                                    <input type="text" placeholder="Course">
-                                    <input type="submit" value="TAKE THIS COURSE">
-                                    <input type="submit" value="WANT DISCOUNT CLICK HERE">
-                                </form>
-                            </div>
-                        </div>
-                
-            </div>
-        </div>
-    </div>
-    
-    <div class="h5-welcome-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <div class="h5-wc-content">
-                        <div class="h5-section-title">
-                            <h2>Welcome To CodeWOW</h2>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco la nisi ut aliquip ex ea commodo consequat.variations of passages of
-                            <br>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit ank id est laborum. Sed ut perspiciatis unde omnis iste natus
-                        </p>
-                        <ul>
-                            <li>There are many variations of passages of Lorem Ipsum</li>
-                            <li>It is a long established fact that a reader will be distracted by the </li>
-                            <li>Contrary to popular belief, Lorem Ipsum is not simply random text</li>
-                        </ul>
-                        <a class="hvr-bs" href="#">Learn Now</a>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <div class="h5-wc-img">
-                        <img src="assets/img/home5/welcome-banner.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- h5-welcome-area-end -->
-    <!-- h5-subject-area-start -->
-    <div class="h5-subject-area bg-with-black">
+<!-- h5-subject-area-start -->
+<div class="h5-subject-area bg-with-black">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
@@ -137,9 +62,10 @@
             </div>
         </div>
     </div>
-    <!-- h5-subject-area-end -->
-    <!-- h5-popular-course-start -->
-    <div class="h5-popular-course-area">
+
+<!-- h5-subject-area-end -->
+<!-- h5-popular-course-start -->
+<div class="h5-popular-course-area">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 col-xs-12">
@@ -155,7 +81,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="h5-course-box">
                         <div class="h5-cb-img">
-                            <a href="#"><img src="assets/img/home5/course1.jpg" alt=""></a>
+                            <a href="#"><img src="img/home5/course1.jpg" alt=""></a>
                         </div>
                         <div class="h5-cb-content">
                             <div class="h5-cbc-meta">
@@ -185,7 +111,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="h5-course-box">
                         <div class="h5-cb-img">
-                            <a href="#"><img src="assets/img/home5/course2.jpg" alt=""></a>
+                            <a href="#"><img src="img/home5/course2.jpg" alt=""></a>
                         </div>
                         <div class="h5-cb-content">
                             <div class="h5-cbc-meta">
@@ -215,7 +141,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="h5-course-box">
                         <div class="h5-cb-img">
-                            <a href="#"><img src="assets/img/home5/course3.jpg" alt=""></a>
+                            <a href="#"><img src="img/home5/course3.jpg" alt=""></a>
                         </div>
                         <div class="h5-cb-content">
                             <div class="h5-cbc-meta">
@@ -328,7 +254,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="h5-lecturers-box">
                         <div class="h5-lecturers-img">
-                            <img src="assets/img/home5/lecturers1.jpg" alt="">
+                            <img src="img/home5/lecturers1.jpg" alt="">
                             <div class="h5-li-over-content">
                                 <a href="#">Anoop Bhutola</a>
                                 <span>J2EE Trainer</span>
@@ -349,7 +275,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="h5-lecturers-box">
                         <div class="h5-lecturers-img">
-                            <img src="assets/img/home5/lecturers2.jpg" alt="">
+                            <img src="img/home5/lecturers2.jpg" alt="">
                             <div class="h5-li-over-content">
                                 <a href="#">Rushtam</a>
                                 <span>Designing Trainer</span>
@@ -370,7 +296,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="h5-lecturers-box">
                         <div class="h5-lecturers-img">
-                            <img src="assets/img/home5/lecturers3.jpg" alt="">
+                            <img src="img/home5/lecturers3.jpg" alt="">
                             <div class="h5-li-over-content">
                                 <a href="#">Sachin</a>
                                 <span>PHP Trainer</span>
@@ -388,13 +314,13 @@
                         </div>
                     </div>
                 </div>
-
-
-
+    
+    
+    
             </div>
         </div>
     </div>
-
+    
     <div class="h5-blog-area">
         <div class="container">
             <div class="row">
@@ -412,14 +338,14 @@
                     <div class="h5-blog-carousel owl-carousel">
                         <div class="h5-blog-box">
                             <div class="h5bb-img">
-                                <a href="#"><img src="assets/img/home5/blog1.jpg" alt=""></a>
+                                <a href="#"><img src="img/home5/blog1.jpg" alt=""></a>
                             </div>
                             <div class="h5bb-content">
                                 <div class="h5bb-c-meta">
                                     <p><i class="fa fa-calendar"></i>Starts From January 1, 2017</p>
                                     <p><i class="fa fa-calendar"></i>End till January 30, 2017</p>
-
-
+    
+    
                                 </div>
                                 <a class="h5bb-title" href="#">New Batches Starts Soon Take Discount.</a>
                                 <p class="h5bb-text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
@@ -428,20 +354,20 @@
                         </div>
                         <div class="h5-blog-box">
                             <div class="h5bb-img">
-                                <a href="#"><img src="assets/img/home5/blog2.jpg" alt=""></a>
+                                <a href="#"><img src="img/home5/blog2.jpg" alt=""></a>
                             </div>
                             <div class="h5bb-content">
                                 <div class="h5bb-c-meta">
                                   J2EE  <p><i class="fa fa-rupee "></i> <del>17,000</del> <font style="color:red">15,000</font></p>
                                   PHP  <p><i class="fa fa-rupee "></i> <del>15,000</del> <font style="color:red">12,000</font></p>                                    
-
+    
                                 </div>
                                 <a class="h5bb-title" href="#">Special Offers For Excellent Students</a>
                                 <p class="h5bb-text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
                                 <a class="h5bb-more hvr-bs" href="#">Read more...</a>
                             </div>
                         </div>
-
+    
                     </div>
                 </div>
             </div>
@@ -452,8 +378,5 @@
 
 
 
-    <app-footer> </app-footer>
+    
 </body>
-
-
-   
